force-app/main/default/objects/Plan__c/Plan__c.object-meta.xml
<CustomObject>
    <label>Plan</label>
    <nameField>
        <displayFormat>PL-{000000}</displayFormat>
        <label>Plan ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Plan</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>