force-app/main/default/objects/Plan__c/fields/BuyingUnitPriceFCY__c.field-meta.xml
<CustomField>
    <fullName>BuyingUnitPriceFCY__c</fullName>
    <label>Buying Unit Price(FCY)</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>