force-app/main/default/objects/Plan__c/fields/BuyingUnitPriceLocal__c.field-meta.xml
<CustomField>
    <fullName>BuyingUnitPriceLocal__c</fullName>
    <label>Buying Unit Price(Local)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>