force-app/main/default/objects/Plan__c/fields/ChargeFreePeriodToAgentMonth__c.field-meta.xml
<CustomField>
    <fullName>ChargeFreePeriodToAgentMonth__c</fullName>
    <label>Charge Free Period to Agent(Month)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>