force-app/main/default/objects/Plan__c/fields/ChargeFreePeriodToEndUserMonth__c.field-meta.xml
<CustomField>
    <fullName>ChargeFreePeriodToEndUserMonth__c</fullName>
    <label>Charge Free Period to End User(Month)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>