force-app/main/default/objects/Plan__c/fields/ContractorType__c.field-meta.xml
<CustomField>
    <fullName>ContractorType__c</fullName>
    <label>Contractor Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>ContracterType</valueSetName>
    </valueSet>
</CustomField>