force-app/main/default/objects/Plan__c/fields/ContractPeriodChargeFree__c.field-meta.xml
<CustomField>
    <fullName>ContractPeriodChargeFree__c</fullName>
    <label>Contract Period Incl Charge&amp;Free(Month)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>