force-app/main/default/objects/Plan__c/fields/ContractPeriodMonth__c.field-meta.xml
<CustomField>
    <fullName>ContractPeriodMonth__c</fullName>
    <label>Contract Period Month</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>