force-app/main/default/objects/Plan__c/fields/ParentPlan__c.field-meta.xml
<CustomField>
    <fullName>ParentPlan__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Parent Plan</label>
    <referenceTo>Plan__c</referenceTo>
    <relationshipLabel>CHILD PLAN</relationshipLabel>
    <relationshipName>ParentPlan</relationshipName>
    <type>Lookup</type>
</CustomField>