force-app/main/default/objects/Plan__c/fields/PlanDetail__c.field-meta.xml
<CustomField>
    <fullName>PlanDetail__c</fullName>
    <label>Plan Detail</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>