force-app/main/default/objects/Plan__c/fields/PlanName__c.field-meta.xml
<CustomField>
    <fullName>PlanName__c</fullName>
    <label>Plan Name</label>
    <length>100</length>
    <type>Text</type>
</CustomField>