force-app/main/default/objects/Plan__c/fields/PlanNickName1__c.field-meta.xml
<CustomField>
    <fullName>PlanNickName1__c</fullName>
    <label>PlanNick Name-1</label>
    <length>100</length>
    <type>Text</type>
</CustomField>