force-app/main/default/objects/Plan__c/fields/PlanType__c.field-meta.xml
<CustomField>
    <fullName>PlanType__c</fullName>
    <label>Plan Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>AvailablePlanType</valueSetName>
    </valueSet>
</CustomField>