force-app/main/default/objects/Plan__c/fields/Product__c.field-meta.xml
<CustomField>
    <fullName>Product__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Product</label>
    <referenceTo>PRODUCT__c</referenceTo>
    <relationshipName>Plan</relationshipName>
    <type>Lookup</type>
</CustomField>