force-app/main/default/objects/Plan__c/fields/SellingUnitPriceLocal__c.field-meta.xml
<CustomField>
    <fullName>SellingUnitPriceLocal__c</fullName>
    <label>Selling Unit Price(Local)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>